// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommunityRow handles high member count and moderator role 1`] = `
<View>
  <StarIcon />
  <ForwardRef
    onPress={[Function]}
  >
    <Text>
      Greater Place
    </Text>
  </ForwardRef>
  <Text>
    24.5k
  </Text>
  <Icon
    name="Members"
  />
</View>
`;

exports[`CommunityRow matches the last snapshot 1`] = `
<View>
  <ForwardRef
    onPress={[Function]}
  >
    <Text>
      Great Place
    </Text>
  </ForwardRef>
  <Text>
    432
  </Text>
  <Icon
    name="Members"
  />
</View>
`;

exports[`MemberBio matches the last snapshot 1`] = `
<View>
  <View>
    <Text>
      About Me
    </Text>
  </View>
  <Control
    hideEditIcon={true}
    isMe={true}
    multiline={true}
    onChangeText={[Function]}
    placeholder="Description"
    value="I live I die!"
  />
</View>
`;

exports[`MemberCommunities matches the last snapshot 1`] = `
<View>
  <Text>
    My Hylo Communities
  </Text>
  <CommunityRow
    membership={
      Object {
        "id": 1,
      }
    }
  />
  <CommunityRow
    membership={
      Object {
        "id": 2,
      }
    }
  />
  <CommunityRow
    membership={
      Object {
        "id": 3,
      }
    }
  />
</View>
`;

exports[`MemberDetails matches the last snapshot 1`] = `<Loading />`;

exports[`MemberDetails returns Loading when there's no person 1`] = `<Loading />`;

exports[`MemberSkills matches the last snapshot 1`] = `
<View>
  <View>
    <Text>
      My Skills
    </Text>
  </View>
  <ForwardRef
    disabled={true}
  >
    <View>
      <Text>
        RUN
      </Text>
      <Text>
        ALL
      </Text>
      <Text>
        DAY
      </Text>
    </View>
  </ForwardRef>
</View>
`;
